--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.2.4",
     "bootstrap": "^4.3.1",
     "core-js": "^2.4.1",
+    "file-system": "^2.2.2",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
@@ -30,9 +31,10 @@
     "@angular/cli": "1.4.10",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
+    "@types/chrome": "0.0.86",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^10.14.12",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
